
[build-system]
requires = ["flit-core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "toolconf"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
dependencies = [
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
yaml = [
  "pyyaml"
]

[tool.flit.module]
name = "toolconfig"
